@@ -100,6 +100,9 @@
             "type": "float"
           }
         }
+      ],
+      "events": [
+        "markerEvent"
       ]
     }
   ],
